// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toIncludeRepeated fails when given string includes given substring 1 time 1`] = `
"expect(received).not.toIncludeRepeated(expected)

Expected string to not include repeated 1 times:
  \\"ell\\"
Received:
  \\"hello world\\""
`;

exports[`.not.toIncludeRepeated fails when given string includes given substring to the given occurrences 1`] = `
"expect(received).not.toIncludeRepeated(expected)

Expected string to not include repeated 3 times:
  \\"l\\"
Received:
  \\"hello world\\""
`;

exports[`.toIncludeRepeated fails when given string does not have a given substring the correct number of times 1`] = `
"expect(received).toIncludeRepeated(expected)

Expected string to include repeated 2 times:
  \\"world\\"
Received:
  \\"hello world\\""
`;

exports[`.toIncludeRepeated fails when given string does not include given substring 1`] = `
"expect(received).toIncludeRepeated(expected)

Expected string to include repeated 1 times:
  \\"bob\\"
Received:
  \\"hello world\\""
`;
